--- a/.github/workflows/web-deployment.yaml
+++ b/.github/workflows/web-deployment.yaml
@@ -45,4 +45,20 @@ jobs:
               run: terraform apply -auto-approve  
 
                     
+    Sync_S3:
+      name: Sync files to S3 Bucket
+      needs: terraform
+      runs-on: ubuntu-latest
             
+      steps:
+        - uses: actions/checkout@master
+        - uses: jakejarvis/s3-sync-action@master
+          with:
+            args: --delete --exclude '.DS_Store'
+            
+          env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_S3_BUCKET: "runsabba.com"
+            AWS_REGION: "us-east-1"
+            SOURCE_DIR: "./website"          
